package xmastree;

public class BlueSpruce extends Tree {
	
	public BlueSpruce() {
		description = "Blue spruce tree decorated with";
	}

	public double cost() {	
		return 20;
	}
}
