package xmastree;

public class DouglasFir extends Tree {

    public DouglasFir(){
        description = "Douglas Fir tree decorated with ";
    }

    public double cost() {
        return 15;
    }
}
