package xmastree;

public class FraserFir extends Tree {

    public FraserFir(){
        description = "Fraser Fir tree decorated with ";
    }

    public double cost() {
        return 12;
    }
}
