@startuml

title __XMASTREE's Class Diagram__\n

  namespace xmastree {
    class xmastree.BalsamFir {
        + BalsamFir()
        + cost()
    }
  }
  

  namespace xmastree {
    class xmastree.BlueBall {
        + BlueBall()
        + cost()
        + getDescription()
    }
  }
  

  namespace xmastree {
    class xmastree.BlueSpruce {
        + BlueSpruce()
        + cost()
    }
  }
  

  namespace xmastree {
    class xmastree.DouglasFir {
        + DouglasFir()
        + cost()
    }
  }
  

  namespace xmastree {
    class xmastree.FraserFir {
        + FraserFir()
        + cost()
    }
  }
  

  namespace xmastree {
    class xmastree.LEDS {
        + LEDS()
        + cost()
        + getDescription()
    }
  }
  

  namespace xmastree {
    class xmastree.Lights {
        + Lights()
        + cost()
        + getDescription()
    }
  }
  

  namespace xmastree {
    class xmastree.RealStar {
        + RealStar()
        + cost()
        + getDescription()
    }
  }
  

  namespace xmastree {
    class xmastree.RedBall {
        + RedBall()
        + cost()
        + getDescription()
    }
  }
  

  namespace xmastree {
    class xmastree.Ribbon {
        + Ribbon()
        + cost()
        + getDescription()
    }
  }
  

  namespace xmastree {
    class xmastree.Ruffles {
        + Ruffles()
        + cost()
        + getDescription()
    }
  }
  

  namespace xmastree {
    class xmastree.SilverBall {
        + SilverBall()
        + cost()
        + getDescription()
    }
  }
  

  namespace xmastree {
    class xmastree.Star {
        + Star()
        + cost()
        + getDescription()
    }
  }
  

  namespace xmastree {
    class xmastree.Test_tree {
        {static} + main()
    }
  }
  

  namespace xmastree {
    abstract class xmastree.Tree {
        ~ description : String
        ~ hasastar : boolean
        {abstract} + cost()
        + getDescription()
        + hasStar()
        + setStar()
    }
  }
  

  namespace xmastree {
    abstract class xmastree.TreeDecorator {
        {abstract} + cost()
        {abstract} + getDescription()
        + hasStar()
        + setStar()
    }
  }
  

  xmastree.BalsamFir -up-|> xmastree.Tree
  xmastree.BlueBall -up-|> xmastree.TreeDecorator
  xmastree.BlueSpruce -up-|> xmastree.Tree
  xmastree.DouglasFir -up-|> xmastree.Tree
  xmastree.FraserFir -up-|> xmastree.Tree
  xmastree.LEDS -up-|> xmastree.TreeDecorator
  xmastree.Lights -up-|> xmastree.TreeDecorator
  xmastree.RealStar -up-|> xmastree.TreeDecorator
  xmastree.RedBall -up-|> xmastree.TreeDecorator
  xmastree.Ribbon -up-|> xmastree.TreeDecorator
  xmastree.Ruffles -up-|> xmastree.TreeDecorator
  xmastree.SilverBall -up-|> xmastree.TreeDecorator
  xmastree.Star -up-|> xmastree.TreeDecorator
  xmastree.TreeDecorator -up-|> xmastree.Tree
  xmastree.TreeDecorator o-- xmastree.Tree : tree


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
